--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,25 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaflet Routing Example</title>
     <!-- Include Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
     <link rel="stylesheet" href="leaflet-routing-machine.css">
     <!-- Include Leaflet and Routing Plugin JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
     <script src="leaflet.js"></script>
     <script src="leaflet-routing-machine.js"></script>
     <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
         #map {
-            height: 400px;
+            height: 800px;
         }
     </style>
 </head>
 <body>
 <div id="map"></div>
 <script>
-    var map = L.map('map').setView([51.505, -0.09], 13); // Initialize map at specific coordinates and zoom level
+    var map = L.map('map').setView([51.51332457042944, 7.473691737918938], 13); // Initialize map at specific coordinates and zoom level
 
     // Add Tile layer for map
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(map);
 
     // Initialize routing control
     var control = L.Routing.control({
