--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Leaflet Routing Example</title>
     <!-- Include Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    <link crossorigin="" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-          crossorigin=""/>
-    <link rel="stylesheet" href="leaflet-routing-machine.css">
+          rel="stylesheet"/>
+    <link href="leaflet-routing-machine.css" rel="stylesheet">
     <!-- Include Leaflet and Routing Plugin JavaScript -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    <script crossorigin=""
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-            crossorigin=""></script>
+            src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="leaflet.js"></script>
     <script src="leaflet-routing-machine.js"></script>
     <style>
@@ -29,6 +29,12 @@
 <div id="map"></div>
 <script>
     var map = L.map('map').setView([51.51332457042944, 7.473691737918938], 13); // Initialize map at specific coordinates and zoom level
+    var imageURL = "https://i.ibb.co/ts3Xzbm/Stadtplan-2-Dortmund-1937-1.jpg";
+    var latLngBounds = L.latLngBounds([[51.5525, 7.4095], [51.4755, 7.5505]]);
+    var imageOverlay = L.imageOverlay(imageURL, latLngBounds, {
+            opacity: 0.6,
+            interactive: true
+        }).addTo(map);
 
     // Add Tile layer for map
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
